--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 keywords = ["caption", "image", "gallery"]
 categories = ["command-line-utilities"]
 license = "MIT"
+repository = "https://github.com/kellpossible/photo-captioner"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
